# truenorth

./: .env.example  .gitignore  Makefile  README.md  config.example.yaml  config.railway.yaml  docker-compose.yml  pyproject.toml  railway.evaluate.toml  railway.toml
.github/workflows/: ci.yml
config/: config.yaml
migrations/: 001_create_analysis.sql  001_create_decisions.sql  002_create_watchlist.sql  003_drop_price_outcomes.sql  004_add_experiments.sql  005_replace_experiment_id_with_prompt_name.sql  006_create_fundamentals_cache.sql
scripts/: migrate.py  place_then_cancel_order.py
tests/: test_config.py  test_trading.py
truenorth/: agent.py  alpaca.py  config.py  context.py  evaluate.py  fundamentals_cache.py  llm.py  main.py  market.py  massive.py  massive_cached.py  prompts.py  server.py  tracing.py  trading.py  watchlist.py
