[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truenorth"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "anthropic",
    "alpaca-py",
    "pytz",  # transitive dep of alpaca-py, not declared by it
    "ollama",
    "psycopg[binary]",
    "pyyaml",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
truenorth = "truenorth.main:main"

[tool.hatch.build.targets.wheel]
packages = ["truenorth"]
