[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truenorth"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "anthropic",
    "alpaca-py",
    "massive",
    "pytz",  # transitive dep of alpaca-py, not declared by it
    "ollama",
    "psycopg[binary]",
    "pyyaml",
    "pydantic-settings",
    "yfinance>=1.2.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[project.scripts]
truenorth = "truenorth.main:main"

[tool.hatch.build.targets.wheel]
packages = ["truenorth"]
